--- a/gitops/nonprod/sample-app/kustomization.yaml
+++ b/gitops/nonprod/sample-app/kustomization.yaml
@@ -2,5 +2,11 @@ resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
+
   - redis-deployment.yaml
   - redis-service.yaml
+
+  - clustersecretstore.yaml
+  - externalsecret.yaml
+
+  - mongo-writer-deployment.yaml
