--- a/gitops/nonprod/sample-app/deployment.yaml
+++ b/gitops/nonprod/sample-app/deployment.yaml
@@ -2,7 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sample-app
-  namespace: default
+  labels:
+    app: sample-app
 spec:
   replicas: 2
   selector:
@@ -15,39 +16,18 @@ spec:
     spec:
       containers:
         - name: sample-app
-          image: 842303506852.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-sample-app:cf93dc6
+          image: sample-app
           ports:
             - containerPort: 80
-
           env:
             - name: OPTION_A
               value: "Cats"
-
             - name: OPTION_B
               value: "Dogs"
-
             - name: REDIS_HOST
               value: "redis"
-
             - name: REDIS_PORT
               value: "6379"
-
-          readinessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 10
-            periodSeconds: 10
-            failureThreshold: 5
-
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 20
-            periodSeconds: 15
-            failureThreshold: 5
-
           resources:
             requests:
               cpu: "100m"
@@ -55,3 +35,15 @@ spec:
             limits:
               cpu: "300m"
               memory: "256Mi"
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 20
+            periodSeconds: 15
